Bug 36552 - FILEOPEN: Three-column TABLE saved with LibO as MS WORD DOCX reopens with missing third column
Summary: FILEOPEN: Three-column TABLE saved with LibO as MS WORD DOCX reopens with mis...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.0 Beta2
Hardware: x86-64 (AMD64) Windows (All)
: medium major
Assignee: Noel Power
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-24 15:24 UTC by Brian OSullivan
Modified: 2017-06-02 12:54 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Correct table save (9.24 KB, application/vnd.oasis.opendocument.text)
2011-04-27 16:11 UTC, Zack
Details
Incorrect .doc save (9.00 KB, application/msword)
2011-04-27 16:12 UTC, Zack
Details
Incorrect .docx save (3.78 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2011-04-27 16:12 UTC, Zack
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Brian OSullivan 2011-04-24 15:24:22 UTC
In v3.3.2 release, .doc saves the table correctly.
In v3.4   beta2,   .doc drops the table and saves unformatted text.
In v3.4   beta2,   .docx didn't get column widths right.
In v3.3.2 release, .docx didn't get column widths right.

The table feature is important for careerbuilder.com where tabs are drop.
Comment 1 Zack 2011-04-27 16:11:21 UTC
Confirmed.  I created a 3 column 2 row document and saved it in .odt, .doc, and .docx.

The .odt file displays everything correctly.  Both .doc and .docx screw up the table pretty badly.  I'll upload all three files.
Comment 2 Zack 2011-04-27 16:11:46 UTC
Created attachment 46133 [details]
Correct table save
Comment 3 Zack 2011-04-27 16:12:12 UTC
Created attachment 46134 [details]
Incorrect .doc save
Comment 4 Zack 2011-04-27 16:12:35 UTC
Created attachment 46135 [details]
Incorrect .docx save
Comment 5 Brian OSullivan 2011-04-28 06:18:59 UTC
v3.3.2 routine saved tables using .doc files 
v3.3.2 routine refused to do correct column width

v.34 beta 2 routines crashed tables using .doc and .docx files
Seems like a minor problem unless the app is worring about legal boundries?
These tables are popular on monster.com and careerbuilder.com (don't use tabs).
Comment 6 Rainer Bielefeld Retired 2011-05-07 00:45:26 UTC
For the .doc problem this one is a DUP of of 
"Bug 36903 - export of tables (.doc) produces corrupted document"
what itself is a DUP of 
"Bug 35805 - Tables corrupted in exported doc-files"

So here we should concentrate on the .docx problem, what seems different to me.

That is [Reproducible] with "LibreOffice 3.4Beta3  – WIN7  Home Premium  (64bit) German UI [DEV300m103 (Build:3)]", with Tack's sample and also my own newly created sample documents.
It's really strange that that's only a problem with 3 column tables, 4 column tables will be saved correctly. Number of rows seems to be irrelevant?

Seems to be a combined FILEOPEN / FILESAFE problem.

FILESAFE: MS WORD Viewer will show correctly 3 columns, but with different column width. That's a minor problem.

FILEOPEN: Exsisting third column will not be shown. That's serious and should be subject of this bug. We will see whether the export problem still will exist when the import problem will have been fixed, please feel free to file a separate bug for that problem.

It's serious, but is it a 3.4 blocker? I don't think so.

@Brian OSullivan, Zack:
I'm pretty sure that it's an all OS problem, but can you please contribute information concerning your OS?

@Cédric:
Please feel free to reassign if it's not your area!
Comment 7 Noel Power 2011-05-09 05:08:18 UTC
I can try have a look at this
Comment 8 Brian OSullivan 2011-05-09 05:33:54 UTC
Table column problem exists in v3.4 b1-4 for .doc & .docx.  
I use .rtf in the mean time.
My PC has Win7 Home Premium, 64bit.
Improper saves are different between betas and formats.
.
In v3.3, the .doc worked right.
It could be converted to .docx by third party software.
Comment 9 Brian OSullivan 2011-05-13 15:48:07 UTC
LibO 3.4-beta5 improved over 3.4-beta4 saving .doc & .docx tables.
Column width is still not right though.
Routine to convert Table <==> Text would be nice.
Comment 10 Rainer Bielefeld Retired 2011-05-13 23:27:11 UTC
@Brian OSullivan:
Please do not comment to problems from other reports here.
There is no improvement concerning the 3 columns problem with 3.4Beta5
Comment 11 Noel Power 2011-05-18 08:22:22 UTC
fixed on master with
http://cgit.freedesktop.org/libreoffice/writer/commit/?id=8f1fe65d4fab09515b0b67319fef67c88533b2e0

removing the regression keyword, the regression in this case is to do with the binary(doc) export problem. Lets keep this bug for the docx specific issue
Comment 12 vihsa 2017-06-02 12:54:27 UTC
the files are displaying as per comment 1

Version: 5.5.0.0.alpha0+
Build ID: 066665644b398a882e6cded98af5bb060af41d76
TinderBox: Android-ARM@24-Bytemark-Hosting, Branch: Master, Time: 2017-06-01 00:30:43