fix for fdo#36552

fix up exported column widths

Signed-off-by: Cedric Bosdonnat <cedric.bosdonnat.ooo@free.fr>